# learnfw

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/iil_learnfw/: __init__.py  apps.py  checks.py  settings.py  signals.py  urls.py  views.py
src/iil_learnfw/api/: __init__.py  assessment_engine_serializers.py  assessment_engine_viewsets.py  permissions.py  serializers.py  urls.py  viewsets.py
src/iil_learnfw/content_backends/: __init__.py  base.py  markdown_backend.py
src/iil_learnfw/grading/: __init__.py  base.py  keyword.py  llm.py
src/iil_learnfw/management/commands/: assessment_seed.py
src/iil_learnfw/models/: __init__.py  assessment.py  assessment_engine.py  certificate.py  course.py  gamification.py  onboarding.py  progress.py  scorm.py
src/iil_learnfw/seeds/: __init__.py  dsgvo_readiness.py  ki_souveraenitaet.py  nis2_readiness.py
src/iil_learnfw/services/: __init__.py  assessment_scoring.py  assessment_service.py  course_service.py  dimension_scoring.py  enrollment_service.py  gamification_service.py  progress_service.py  recommendation_service.py  scoring_service.py
src/iil_learnfw/templates/iil_learnfw/: course_detail.html  course_list.html
tests/: settings.py  test_api.py  test_assessment.py  test_assessment_engine.py  test_dimension_scoring.py  test_gamification.py  test_grading.py  test_models.py  test_onboarding.py  test_progress.py  test_scorm.py  test_services.py  test_settings_module.py
